--- a/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
+++ b/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
@@ -50,9 +50,9 @@
 							<li class="nav-item"><a class="nav-link" href="/Rack/Index"><span class="nav-text">Racks</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/Bin/Index"><span class="nav-text">Bins</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/BinType/Index"><span class="nav-text">Bin Types</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="/MasterData/ProductList"><span class="nav-text">Products</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="/MasterData/SupplierList"><span class="nav-text">Suppliers</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="/MasterData/CustomerList"><span class="nav-text">Customers</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/Product/Index"><span class="nav-text">Products</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/Supplier/Index"><span class="nav-text">Suppliers</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/Customer/Index"><span class="nav-text">Customers</span></a></li>
 						</ul>
 					</div>
 				</li>
