--- a/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
+++ b/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
@@ -83,7 +83,7 @@
 					<div class="collapse" id="inventoryCollapse" data-bs-parent="#sidebarNav">
 						<ul class="nav flex-column ms-3">
 							<li class="nav-item"><a class="nav-link" href="/Inventory/Index"><span class="nav-text">Inventory List</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">Putaway</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/Putaway/Index"><span class="nav-text">Putaway</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">Picking</span></a></li>
 						</ul>
 					</div>
