--- a/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
+++ b/WMS_DEPI_GRAD/Views/Shared/_Layout.cshtml
@@ -84,7 +84,7 @@
 						<ul class="nav flex-column ms-3">
 							<li class="nav-item"><a class="nav-link" href="/Inventory/Index"><span class="nav-text">Inventory List</span></a></li>
 							<li class="nav-item"><a class="nav-link" href="/Putaway/Index"><span class="nav-text">Putaway</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">Picking</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/Picking/Index"><span class="nav-text">Picking</span></a></li>
 						</ul>
 					</div>
 				</li>
@@ -99,7 +99,7 @@
 					<div class="collapse" id="salesCollapse" data-bs-parent="#sidebarNav">
 						<ul class="nav flex-column ms-3">
 							<li class="nav-item"><a class="nav-link" href="/SalesOrder/Index"><span class="nav-text">Sales Orders</span></a></li>
-							<li class="nav-item"><a class="nav-link" href="#"><span class="nav-text">Picking</span></a></li>
+							<li class="nav-item"><a class="nav-link" href="/Picking/Index"><span class="nav-text">Picking</span></a></li>
 						</ul>
 					</div>
 				</li>
