--- a/WMS_DEPI_GRAD/Views/Aisle/Index.cshtml
+++ b/WMS_DEPI_GRAD/Views/Aisle/Index.cshtml
@@ -40,6 +40,7 @@
                         <tr>
                             <th class="ps-4 py-3">Name</th>
                             <th class="py-3">Zone</th>
+                            <th class="py-3">Warehouse</th>
                             <th class="py-3 text-end pe-4">Actions</th>
                         </tr>
                     </thead>
@@ -49,6 +50,7 @@
                             <tr>
                                 <td class="ps-4 fw-bold text-primary-orange">@item.Name</td>
                                 <td>@(item.Zone?.Name ?? "N/A")</td>
+                                <td>@(item.Zone?.Warehouse?.Name ?? "N/A")</td>
                                 <td class="text-end pe-4">
                                     <div class="btn-group">
                                         <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-sm btn-light text-primary-orange"><i class="fas fa-eye"></i></a>
